--- a/Nerde Yesem/Nerde Yesem/Storyboards/Base.lproj/Main.storyboard
+++ b/Nerde Yesem/Nerde Yesem/Storyboards/Base.lproj/Main.storyboard
@@ -1,28 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gqm-hQ-jna">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Categories View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--NearbyRestaurants-->
+        <scene sceneID="UQU-cl-hp7">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="CategoriesViewController" customModule="Nerde_Yesem" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="NearbyRestaurants" id="5vJ-MV-x73" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="DFA-oe-DAL"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="44z-Iz-EIW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1891" y="272"/>
+        </scene>
+        <!--Categories-->
+        <scene sceneID="emF-7e-a2y">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Categories" id="P3E-xa-6Hc" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="qNw-R4-qa7"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="o7e-s7-1Li" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1107" y="272"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="QqN-vP-lsV">
+            <objects>
+                <tabBarController id="gqm-hQ-jna" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zc4-KG-g5x">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="P3E-xa-6Hc" kind="relationship" relationship="viewControllers" id="NhL-n3-Ew8"/>
+                        <segue destination="5vJ-MV-x73" kind="relationship" relationship="viewControllers" id="KRJ-EM-PHU"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1HO-jk-V4X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1475" y="-156"/>
         </scene>
     </scenes>
 </document>
