--- a/Nerde Yesem/Nerde Yesem/Storyboards/Categories.storyboard
+++ b/Nerde Yesem/Nerde Yesem/Storyboards/Categories.storyboard
@@ -17,7 +17,60 @@
                     <view key="view" contentMode="scaleToFill" id="RLn-mx-z4V">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fz6-5i-ZHU">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="categoriesCell" rowHeight="110" id="JFA-SN-5eS" customClass="CategoriesCell" customModule="Nerde_Yesem" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="110"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JFA-SN-5eS" id="BPN-cb-36A">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="109.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l8u-h0-qgf">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="109.5"/>
+                                                </imageView>
+                                                <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mcv-JG-bKn">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="109.5"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TI4-H6-7RB">
+                                                    <rect key="frame" x="181" y="43" width="52" height="24"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="l8u-h0-qgf" secondAttribute="trailing" id="7sZ-0R-knP"/>
+                                                <constraint firstItem="l8u-h0-qgf" firstAttribute="leading" secondItem="BPN-cb-36A" secondAttribute="leading" id="OL8-Dp-fja"/>
+                                                <constraint firstItem="Mcv-JG-bKn" firstAttribute="leading" secondItem="BPN-cb-36A" secondAttribute="leading" id="VHN-8d-70W"/>
+                                                <constraint firstItem="TI4-H6-7RB" firstAttribute="centerX" secondItem="BPN-cb-36A" secondAttribute="centerX" id="Z7r-aC-2CE"/>
+                                                <constraint firstItem="TI4-H6-7RB" firstAttribute="centerY" secondItem="BPN-cb-36A" secondAttribute="centerY" id="duo-Hu-nhv"/>
+                                                <constraint firstAttribute="bottom" secondItem="Mcv-JG-bKn" secondAttribute="bottom" id="fyu-Yg-xm7"/>
+                                                <constraint firstItem="Mcv-JG-bKn" firstAttribute="top" secondItem="BPN-cb-36A" secondAttribute="top" id="jFu-Cx-obI"/>
+                                                <constraint firstItem="l8u-h0-qgf" firstAttribute="top" secondItem="BPN-cb-36A" secondAttribute="top" id="ltI-nj-OOs"/>
+                                                <constraint firstAttribute="bottom" secondItem="l8u-h0-qgf" secondAttribute="bottom" id="p0f-3S-V4Y"/>
+                                                <constraint firstAttribute="trailing" secondItem="Mcv-JG-bKn" secondAttribute="trailing" id="xKf-Ot-FHY"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="categoryName" destination="TI4-H6-7RB" id="2aH-xb-Hes"/>
+                                            <outlet property="categoryThumbail" destination="l8u-h0-qgf" id="SHQ-vZ-vmQ"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Li6-xK-5su" firstAttribute="trailing" secondItem="fz6-5i-ZHU" secondAttribute="trailing" id="04g-aJ-ARZ"/>
+                            <constraint firstItem="fz6-5i-ZHU" firstAttribute="leading" secondItem="Li6-xK-5su" secondAttribute="leading" id="CWb-fw-rms"/>
+                            <constraint firstItem="fz6-5i-ZHU" firstAttribute="top" secondItem="Li6-xK-5su" secondAttribute="top" id="gHZ-2Q-hf1"/>
+                            <constraint firstItem="Li6-xK-5su" firstAttribute="bottom" secondItem="fz6-5i-ZHU" secondAttribute="bottom" id="nlI-m5-jQW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Li6-xK-5su"/>
                     </view>
                     <navigationItem key="navigationItem" id="Z62-8f-pCp"/>
