--- a/Nerde Yesem/Nerde Yesem/Storyboards/Base.lproj/Main.storyboard
+++ b/Nerde Yesem/Nerde Yesem/Storyboards/Base.lproj/Main.storyboard
@@ -39,8 +39,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="P3E-xa-6Hc" kind="relationship" relationship="viewControllers" id="NhL-n3-Ew8"/>
-                        <segue destination="5vJ-MV-x73" kind="relationship" relationship="viewControllers" id="KRJ-EM-PHU"/>
+                        <segue destination="5vJ-MV-x73" kind="relationship" relationship="viewControllers" id="KQx-HV-S8W"/>
+                        <segue destination="P3E-xa-6Hc" kind="relationship" relationship="viewControllers" id="ALG-h5-bwL"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1HO-jk-V4X" userLabel="First Responder" sceneMemberID="firstResponder"/>
