--- a/Nerde Yesem/Nerde Yesem/Storyboards/Categories.storyboard
+++ b/Nerde Yesem/Nerde Yesem/Storyboards/Categories.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fz6-5i-ZHU">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fz6-5i-ZHU">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -74,6 +74,9 @@
                         <viewLayoutGuide key="safeArea" id="Li6-xK-5su"/>
                     </view>
                     <navigationItem key="navigationItem" id="Z62-8f-pCp"/>
+                    <connections>
+                        <outlet property="categoriesTableView" destination="fz6-5i-ZHU" id="HwI-kP-YWG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MMn-n6-Y2j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
